[package]
name = "tracing-ohos"
version = "0.1.0"
edition = "2021"
authors = ["Xiangyi Meng <xymeng16@gmail.com>"]
license = "Apache-2.0"
keywords = ["tracing", "harmonyos", "openharmony","log"]
description = "Tracing layer to log to hilog"
repository = "https://github.com/HomoArk/tracing-ohos"

[dependencies]
hilog-sys = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"