[package]
name = "tracing-ohos"
version = "0.1.0"
edition = "2021"
authors = ["Xiangyi Meng <xymeng16@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["tracing", "harmonyos", "openharmony","log"]
categories = ["development-tools::debugging"]
description = "Tracing layer to log to OpenHarmony's HiLog"
repository = "https://github.com/HomoArk/tracing-ohos"
readme = "README.md"

[dependencies]
hilog-sys = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"